--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="array.js"></script> 
+    <script src="functionsandmethods.js"></script> 
 </body>
 </html>
